Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanTextObjField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        Text var
        var:SetValue("text")
        return var
    end
end